--- a/src/styles/css/component/form.css
+++ b/src/styles/css/component/form.css
@@ -3,10 +3,10 @@
 }
 .group_field .field_input {
   margin-top: 4px;
-  background: #FAFAFA;
-  border: 1px solid #F2F2F2;
+  background: #fafafa;
+  border: 1px solid #f2f2f2;
   border-radius: 8px;
   height: 40px;
   padding: 12px 8px;
-  color: #AEAEAE;
+  color: #aeaeae;
 }
