--- a/src/styles/css/game.css
+++ b/src/styles/css/game.css
@@ -65,6 +65,8 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  position: relative;
+  z-index: 999;
 }
 @media (min-width: 1024px), ((min-width: 768px) and (orientation: portrait)) {
   .game_heading {
@@ -156,6 +158,81 @@
   .group_user {
     width: 14.3830431491%;
   }
+}
+.group_user .money_bet {
+  position: absolute;
+  bottom: -4px;
+  left: 30%;
+  -webkit-transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  transform: translateY(100%);
+  background-color: rgba(0, 0, 0, 0.7);
+  height: 16px;
+  min-width: 70%;
+  border-radius: 20px;
+  text-align: left;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 0 6px;
+  align-items: center;
+  font-weight: bold;
+  font-size: 87.5%;
+  gap: 8px;
+}
+@media (min-width: 1024px), ((min-width: 768px) and (orientation: portrait)) {
+  .group_user .money_bet {
+    height: 26px;
+    padding: 0 12px;
+    font-size: 137.5%;
+    letter-spacing: 0.4px;
+  }
+}
+.group_user .money_bet .icon {
+  -webkit-animation: animName 4s linear infinite;
+  animation: animName 4s linear infinite;
+}
+@media (min-width: 320px) and (orientation: portrait),
+  (max-width: 1023px) and (orientation: landscape) {
+  .group_user .money_bet .icon {
+    width: 10px;
+    height: 10px;
+  }
+}
+@-webkit-keyframes animName {
+  0% {
+    -webkit-transform: rotateY(0deg);
+    transform: rotateY(0deg);
+  }
+  100% {
+    -webkit-transform: rotateY(360deg);
+    transform: rotateY(360deg);
+  }
+}
+@keyframes animName {
+  0% {
+    -webkit-transform: rotateY(0deg);
+    transform: rotateY(0deg);
+  }
+  100% {
+    -webkit-transform: rotateY(360deg);
+    transform: rotateY(360deg);
+  }
+}
+.group_user .money_bet span {
+  background: linear-gradient(
+    236.68deg,
+    #ceb900 13.29%,
+    #fafbc0 30.82%,
+    #feffdc 43.82%,
+    #ffec42 59.09%,
+    #c4ff9f 69.83%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .group_user .wrap {
   padding: 5.5299539171% 5.5299539171%;
@@ -335,6 +412,23 @@
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
+.group_user:before {
+  position: absolute;
+  top: 1.5px;
+  left: 1.5px;
+  right: 1.5px;
+  bottom: 1.5px;
+  content: '';
+  z-index: -1;
+  border-width: 4px;
+  border-radius: 6px;
+  pointer-events: none;
+}
+@media (min-width: 992px) {
+  .group_user:before {
+    border-radius: 5px;
+  }
+}
 .group_user.user_active:not(.is-lose) {
   z-index: 1;
   background-image: linear-gradient(
@@ -349,22 +443,7 @@
   box-shadow: -2px 4px 8px 4px rgba(0, 0, 0, 0.5019607843);
 }
 .group_user.user_active:not(.is-lose):before {
-  position: absolute;
-  top: 1.5px;
-  left: 1.5px;
-  right: 1.5px;
-  bottom: 1.5px;
-  content: '';
-  z-index: -1;
-  border-width: 4px;
-  border-radius: 6px;
   background-color: #0e063a;
-  -webkit-box-shadow:
-    inset 0 0 30px rgba(150, 100, 50, 0.3),
-    0 0 20px rgba(255, 255, 200, 0.8);
-  box-shadow:
-    inset 0 0 30px rgba(150, 100, 50, 0.3),
-    0 0 20px rgba(255, 255, 200, 0.8);
   background-image: linear-gradient(
     221.05deg,
     rgba(14, 6, 58, 0.55) -1.65%,
@@ -373,10 +452,30 @@
     rgba(36, 0, 255, 0.55) 130.8%
   );
 }
-@media (min-width: 992px) {
-  .group_user.user_active:not(.is-lose):before {
-    border-radius: 5px;
-  }
+.group_user.user_done:not(.is-lose) {
+  z-index: 1;
+}
+.group_user.user_done:not(.is-lose):before {
+  border: 2px solid transparent;
+  background:
+    linear-gradient(
+        221.05deg,
+        #2e2089 -1.65%,
+        #513adc 27.49%,
+        #8a76ff 55.31%,
+        #735ef0 75.83%,
+        #0c0054 130.8%
+      )
+      padding-box,
+    linear-gradient(
+        236.68deg,
+        #c9dcff 13.29%,
+        #85afff 30.53%,
+        #326cdc 47.21%,
+        #c9dcff 59.37%,
+        #85afff 65.59%
+      )
+      border-box;
 }
 .group_user .status {
   position: absolute;
@@ -393,7 +492,7 @@
   padding-top: 100%;
   border-radius: 50%;
   position: relative;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   -webkit-box-shadow: 0px 1px 80px 14px rgba(0, 0, 0, 0.8);
   box-shadow: 0px 1px 80px 14px rgba(0, 0, 0, 0.8);
 }
@@ -407,8 +506,8 @@
   border-radius: 50%;
 }
 .group_user .status .wrap_status svg .circle {
-  stroke-dasharray: 1000;
-  stroke-dashoffset: 1000;
+  stroke-dasharray: 700;
+  stroke-dashoffset: 700;
 }
 @-webkit-keyframes stroke {
   to {
@@ -449,6 +548,17 @@
   .group_user .status .wrap_status span {
     font-size: 200%;
   }
+}
+.group_user .status .wrap_status .money {
+  top: 0;
+  left: 80%;
+  right: auto;
+  -webkit-transform: translate(0, -100%);
+  -ms-transform: translate(0, -100%);
+  transform: translate(0, -100%);
+  font-weight: 700;
+  white-space: nowrap;
+  font-size: 112.5% !important;
 }
 .group_user .status_quarter span {
   background-image: linear-gradient(
@@ -512,6 +622,10 @@
   .group_user .status_raise span {
     font-size: 168.75% !important;
   }
+}
+.group_user .status_raise span.money {
+  top: 30% !important;
+  left: 100% !important;
 }
 .group_user .status_raise svg {
   -webkit-box-shadow: 0px 1px 15px 3px rgba(116, 94, 240, 0.3529411765);
@@ -579,6 +693,29 @@
   left: 0;
   width: 50.6912442396%;
 }
+.group_user .status_countdown {
+  position: relative;
+  -webkit-transform-origin: left bottom;
+  -ms-transform-origin: left bottom;
+  transform-origin: left bottom;
+}
+.group_user .status_countdown span {
+  background-image: linear-gradient(
+    236.68deg,
+    #ce0003 13.29%,
+    #de7d67 30.82%,
+    #ffdce2 43.82%,
+    #ff4242 59.09%,
+    #ff9f9f 69.83%
+  );
+}
+.group_user .status_countdown svg {
+  -webkit-box-shadow: 0px 1px 15px 3px rgba(255, 66, 72, 0.3019607843);
+  box-shadow: 0px 1px 15px 3px rgba(255, 66, 72, 0.3019607843);
+}
+.group_user .status_countdown .circle {
+  stroke: #ff4248;
+}
 .group_user:not(.is-status) .status {
   opacity: 0;
 }
@@ -586,8 +723,8 @@
   opacity: 1;
 }
 .group_user.is-status .status .circle {
-  -webkit-animation: stroke 3s ease-out forwards;
-  animation: stroke 3s ease-out forwards;
+  -webkit-animation: stroke 5s ease-out forwards;
+  animation: stroke 5s ease-out forwards;
 }
 .group_user.is-status.is-active {
   -webkit-box-shadow: 0px 1px 80px 14px rgba(0, 0, 0, 0.8);
@@ -600,6 +737,10 @@
   pointer-events: none;
   color: rgba(255, 255, 255, 0.3);
 }
+.group_tool.is-lose:before,
+.group_user.is-lose:before {
+  display: none !important;
+}
 .group_tool.is-lose .avatar,
 .group_tool.is-lose .pocker_list,
 .group_tool.is-lose .toolbar,
@@ -611,11 +752,9 @@
   -webkit-filter: grayscale(0.7);
   filter: grayscale(0.7);
 }
-.group_tool.is-lose .pocker_list,
-.group_tool.is-lose .avatar,
-.group_user.is-lose .pocker_list,
-.group_user.is-lose .avatar {
-  opacity: 0.3;
+.group_tool.is-lose .money_bet,
+.group_user.is-lose .money_bet {
+  display: none;
 }
 
 .group_tool.user_active:before {
@@ -1403,6 +1542,15 @@
     top: 65%;
   }
 }
+.group_tool .group_left .group_user .money_bet {
+  bottom: auto;
+  top: 0;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  left: 100%;
+  right: 0;
+}
 .group_tool .toolbar {
   -webkit-box-flex: 1;
   -ms-flex-positive: 1;
@@ -1631,7 +1779,8 @@ html {
     -webkit-transform-origin: left top;
     -ms-transform-origin: left top;
     transform-origin: left top;
-    width: 100vh;
+    width: 100svh;
+    height: -webkit-fill-available;
     height: 100vw;
     overflow-x: hidden;
     position: absolute;
