--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -11,11 +11,11 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   position: relative;
   z-index: 1;
   padding: 16px;
@@ -37,4 +37,289 @@
 .block_login .form_login .logo {
   max-width: 180px;
   margin: auto;
+}
+
+.game_heading {
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+  background-image: url(/images/header_bg.png);
+  background-size: 100% 100%;
+  height: 30px;
+  padding: 8px 4.1666666667% 8px 4.1666666667%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  position: relative;
+  z-index: 999;
+}
+@media (min-width: 1024px), ((min-width: 768px) and (orientation: portrait)) {
+  .game_heading {
+    height: 45px;
+  }
+}
+@media (min-width: 1241px) {
+  .game_heading {
+    height: 50px;
+  }
+}
+@media (min-width: 1801px) {
+  .game_heading {
+    height: 60px;
+  }
+}
+.game_heading .logo {
+  display: block;
+  height: 100%;
+}
+.game_heading .logo img {
+  height: 80%;
+  width: auto;
+}
+.game_heading .toolbar {
+  gap: 4px;
+}
+.game_heading .toolbar .line {
+  width: 1px;
+  height: 30px;
+  border-left: 1px solid rgba(255, 255, 255, 0.2);
+}
+@media (min-width: 320px) and (orientation: portrait),
+  (max-width: 1023px) and (orientation: landscape) {
+  .game_heading .toolbar .line {
+    display: none;
+  }
+}
+.game_heading .toolbar .item {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  padding: 3px 16px;
+  border-radius: 20px;
+  color: #fff;
+  font-weight: 500;
+  font-size: 75%;
+  border: 1px solid transparent;
+  cursor: pointer;
+}
+@media (min-width: 320px) and (orientation: portrait),
+  (max-width: 1023px) and (orientation: landscape) {
+  .game_heading .toolbar .item {
+    padding: 2px 3px 0px;
+  }
+  .game_heading .toolbar .item span {
+    display: none;
+  }
+  .game_heading .toolbar .item img {
+    width: 24px;
+    height: auto;
+  }
+}
+@media (min-width: 1024px), ((min-width: 768px) and (orientation: portrait)) {
+  .game_heading .toolbar .item:hover {
+    -webkit-box-shadow: 0px 2px 8px 0px #003572 inset;
+    box-shadow: 0px 2px 8px 0px #003572 inset;
+    border: 1px solid #034086;
+    background: #012044;
+  }
+}
+
+main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.boding_main {
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: #fff;
+}
+.boding_main .sidebar_left,
+.boding_main .sidebar_right {
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+  height: 100%;
+  width: 320px;
+  padding: 16px;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.boding_main .content_main {
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  padding: 36px 24px 16px;
+  background-color: rgba(21, 19, 19, 0.9);
+}
+.boding_main .content_main .inner {
+  height: 100%;
+}
+.boding_main .content_main .form_custom {
+  min-height: 100%;
+}
+.boding_main .content_main .ttl_main {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  padding-bottom: 16px;
+}
+
+.avatar {
+  background-image: url(/images/avt_bg.png);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  padding: 7%;
+  max-width: 250px;
+}
+.avatar .imgDrop {
+  padding-top: 100%;
+  border-radius: 50%;
+}
+
+.select_avt .group_item {
+  width: 80px;
+  padding: 8px;
+}
+.select_avt .group_item label {
+  display: block;
+  padding-left: 0;
+}
+.select_avt .group_item label:before,
+.select_avt .group_item label:after {
+  display: none;
+}
+.select_avt .group_item label .imgDrop {
+  border-radius: 50%;
+}
+
+.info_profile {
+  background-color: #0e063a;
+  background-image: linear-gradient(
+    221.05deg,
+    rgba(14, 6, 58, 0.55) -1.65%,
+    rgba(56, 33, 199, 0.55) 63.25%,
+    rgba(56, 33, 199, 0.55) 63.91%,
+    rgba(30, 6, 186, 0.55) 130.8%
+  );
+  border-radius: 8px;
+  padding: 16px;
+}
+.info_profile .avatar {
+  margin-top: -30px;
+  width: 100px;
+}
+.info_profile .rank {
+  color: rgba(255, 255, 255, 0.5);
+}
+.info_profile .rank_gold {
+  color: #ffec42;
+}
+.info_profile .rank_daimond {
+  color: #0abafa;
+}
+.info_profile .money {
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 30px;
+  -webkit-box-shadow: inset 0 0 25px #08174a;
+  box-shadow: inset 0 0 25px #08174a;
+  padding: 8px 16px;
+}
+.info_profile .money .number {
+  background: linear-gradient(
+    236.68deg,
+    #ceb900 13.29%,
+    #fafbc0 30.82%,
+    #feffdc 43.82%,
+    #ffec42 59.09%,
+    #c4ff9f 69.83%
+  );
+  font-weight: bold;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.info_profile .info_more {
+  margin-left: -4px;
+  margin-right: -4px;
+}
+.info_profile .info_more .col-4 {
+  padding: 0 4px;
+}
+.info_profile .info_more dl {
+  margin: 0;
+  padding: 8px 4px;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 4px;
+}
+.info_profile .info_more .icon {
+  opacity: 0.5;
+  margin-bottom: 4px;
+}
+.info_profile .info_more dt,
+.info_profile .info_more dd {
+  font-weight: normal;
+  color: rgba(255, 255, 255, 0.5);
+  margin: 0;
+}
+.info_profile .info_more dd {
+  color: rgba(255, 255, 255, 0.7);
+  margin-top: 4px;
+}
+
+.list_menu {
+  color: rgba(255, 255, 255, 0.5);
+  margin-left: -16px;
+  margin-right: -16px;
+}
+.list_menu ul li {
+  padding: 12px 32px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  gap: 12px;
+  cursor: pointer;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.list_menu ul li.active,
+.list_menu ul li:hover {
+  color: #fff;
+}
+.list_menu ul li.active .icon,
+.list_menu ul li:hover .icon {
+  opacity: 1;
+}
+.list_menu ul li.active {
+  background-color: rgba(255, 255, 255, 0.05);
+}
+.list_menu ul li .icon {
+  opacity: 0.5;
+}
+.list_menu ul li + li {
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  position: relative;
+}
+
+.ttl_head {
+  background-color: rgba(0, 0, 0, 0.8);
+  height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
